# REALShahnameh

./: .env.example  .gitignore  3rdpartylicenses.txt  3riali.html  Dockerfile  README.md  admin.html  index.angular.bak.html  index.html  main.7c2d504be9c2c2a0.js  package.json  polyfills.0be22f82b8df76de.js  pyproject.toml  requirements.txt  runtime.250ffa42cd367c8d.js  scripts.6cfef20b4c7e65bd.js  season2-newpage.txt  styles.43ce428fda60e1f2.css  styles.43ce428fda60e1f2.css.save  styles.backup-before-season2.css  vendor.91d76b3ea589cad5.js
api/basic/: getUserScore
assets/: tonconnect-manifest.json
assets/images/: coin-animation.webm  earncoin.webm
bot/: __init__.py  admin_tools.py  api.py  audit.py  config.py  database.py  handlers.py  main.py  models.py  observability.py  real_token.py  reports.py  security.py  session_manager.py  token_service.py
docs/: launch_and_support.md  pilot_plan.md  real_token_contract.md  security_testing.md
public/: index.html  real-landing.html
public/scripts/: landing.js  main.js
public/styles/: landing.css  main.css
season2/: app.js  chapter.css  chapter.html  chapter.js  clan.js  earn.html  heroes.css  heroes.html  heroes.js  home.css  home.js  i18n.js  index.html  index.html.current-broken.bak  intro.css  intro.html  intro.js  learn.html  learn.js  market.js  qa-check.sh  resources.js  social.html  style.css  tap.css  tap.html  tap.js
season2/data/: ad-rewards.json  chapters.json  heroes.json  quizzes.json
season2/i18n/: en.js  (+2 more)
src/: main.js
tests/: content.test.js  flow.test.js  progression.test.js  rewards.test.js
(+11 files in other folders)
